# OpenSidescan

./: AGENTS.md  CMakeLists.txt  version.md  versions.md
.github/workflows/: ci.yml
Scripts/: build_installer.bat  win-unittest.bat  winlocktest.bat
src/OpenSidescan/inventoryobject/: inventoryobject.cpp
src/cli/: haralick-analysis.cpp
test/: CMakeLists.txt  XtfSupportTest.hpp  main.cpp
test/fit-detector_unit-test/: main.cpp
test/linuxFileLockTest/: CMakeLists.txt  main.cpp
test/unitTests/: CMakeLists.txt  main.cpp
test/win-fileLock-test/: CMakeLists.txt  winLockCatchMain.cpp
